--- a/index.html
+++ b/index.html
@@ -7,8 +7,14 @@
      <link rel="stylesheet" href="style.css">
 </head>
 <body>
-      <button id="btn">click</button>
+ <header>
 
-      <script src="script.js"></script>
+
+ </header>
+
+ <main>
+      <div class="featured__posts"></div>
+      <div class="categories"></div>
+ </main>
 </body>
 </html>
